--- a/theme/cte/templates/mails/reservationEDM.html
+++ b/theme/cte/templates/mails/reservationEDM.html
@@ -24,13 +24,12 @@
     <td>
       Date prévue d'arrivée : { startDate }<br/> 
       Nombre de nuits : { nbOfNights }<br/>
-      Date prévue de départ : { endDate }<br/><br/>
-      <!--Type d'hébergement : { hebergement }<br/>-->
+      Date prévue de départ : { endDate }<br/><br/>  
     </td>
     <td>
+      Type d'hébergement : { hebergement }<br/>
       Groupe d'adultes (nombre envisagé) : { nombreAdultes }<br/> 
       Groupe de jeunes (nombre envisagé) : { nombreJeunes }<br/>
-      Individuel (nombre envisagé) : { nombreIndividuel }<br/><br/>
     </td>   
   </tr>
   </table><br/>
