--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -313,10 +313,13 @@ display: block;
 }
 .nav-entree .date{
 				font-family: 'Oswald Light';
-				margin-bottom:30px;
 				border:5px solid white;
 				color: white;
 }
+.nav-entree .description{
+        font-size:0.6em;
+        margin-bottom:30px;
+    }
 .nav-entree p{margin: 0 50px 10px;}
 .nav-entree a{color:@txt_violet;}
 .nav-entree a:hover{color:@txt_violet;font-size:1.05em;}
