--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -316,6 +316,12 @@ display: block;
 				border:5px solid white;
 				color: white;
 }
+@media screen and (min-width: @tablet){
+				.nav-entree .date{
+								 margin-bottom: 25px;
+				}
+}
+   
 .nav-entree .description{
         font-size:0.6em;
         margin-bottom:30px;
