--- a/theme/cte/templates/mails/reservationEDM.html
+++ b/theme/cte/templates/mails/reservationEDM.html
@@ -18,6 +18,7 @@
   </td>
  </tr>
 </table>
+<br/>
 <h3>2) Demande</h3>
 <table width="80%">
   <tr >
@@ -33,7 +34,7 @@
       - Jeunes : { nombreJeunes }<br/>
     </td>   
   </tr>
-  </table><br/>
+  </table><br/><br/>
 
   <h3>3) Commentaires</h3>
   <p style="font-style:italic;">(dont le type de chambre demandé)</p><br/>
