--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -434,6 +434,7 @@ header.bg-image{
     -webkit-background-size: cover;
 				h1,h2,h3,h4,h5,p{color:white; font-family: 'trend_sansone'};
 		height:400px;
+		max-height: 60vh;
 		//box-shadow:inset 0 0 0 1000px rgba(84,84,84,.25);
 		margin-bottom:24px;
 		line-height: 400px;
