--- a/theme/foyers/templates/blocks/formulaire/parents.html
+++ b/theme/foyers/templates/blocks/formulaire/parents.html
@@ -1,18 +1,8 @@
     
     
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Situation.Familiale")}}*</label></div>
-            <div class="col-sm-8 display_left">
-                <input type="radio"  name="situationFamiliale" id="ensemble" value="ensemble" ng-model="inscription.situationFamiliale" ng-click="formCtrl.parentsEnsemble = true; formCtrl.parentsSepares = false;" required>
-                            <label for="ensemble" class="sexe_label boite">{{rubedo.translate("Block.InscriptionSituation.Familiale.Ensemble")}}</label>	
-                <input type="radio"  name="situationFamiliale" id="separes" value="separes" ng-model="inscription.situationFamiliale" ng-click="formCtrl.parentsEnsemble = false; formCtrl.parentsSepares = true;">
-                            <label for="separes" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Situation.Familiale.Separes")}}</label>
-            </div>
-        </div>
-    </div>
     
-    <div class="container" ng-if="formCtrl.parentsEnsemble || formCtrl.parentsSepares ">
+    
+    <div class="container">
         <!--PERE-->
         <div class="col-md-6 col-sm-12">
             <h3 class="row">{{rubedo.translate("Block.Inscription.Pere")}}</h3>
@@ -44,13 +34,18 @@
                 </div>
             </div>
             <div class="row" ng-if="!personneConnue">
-                    <div class="col-sm-4"><label for="tel2Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
+                    <div class="col-sm-4"><label for="tel1Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
                     <div class="col-sm-8"><input class="form-control" type="text" id="tel1Pere" name="tel1Pere" ng-model="inscription.tel1Pere"  required>
+                    </div>
+            </div>
+            <div class="row" ng-if="!personneConnue">
+                    <div class="col-sm-4"><label for="tel3Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Professionnel")}}</label></div>
+                    <div class="col-sm-8"><input class="form-control" type="text" id="tel3Pere" name="tel3Pere" ng-model="inscription.tel3Pere" >
                     </div>
             </div>
             
             
-            <div ng-if="formCtrl.parentsSepares">
+            <div>
                 <div class="row">
                     <div class="col-sm-4"><label for="adressePere" class="label_style">{{rubedo.translate("Block.Inscription.Adresse")}}*</label></div>
                     <div class="col-sm-8"><textarea class="form-control" rows="3" id="adressePere" ng-model="inscription.addressPere" name="addressPere" placeholder="" required></textarea></div>
@@ -70,7 +65,7 @@
                 
                 <!--ng-pattern="/^(0|\+33|0033){1}\/?[1-9]\s?([0-9]\s?){8}$/"-->
                 <div class="row" ng-if="!personneConnue">
-                    <div class="col-sm-4"><label for="tel1Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}*</label></div>
+                    <div class="col-sm-4"><label for="tel2Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}*</label></div>
                     <div class="col-sm-8"><input class="form-control" type="text" id="tel2Pere" name="tel2Pere"  ng-model="inscription.tel2Pere" required></div>
                 </div>
                 
@@ -108,8 +103,22 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4"><label for="tel2Mere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
+                    <div class="col-sm-4"><label for="tel1Mere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
                     <div class="col-sm-8"><input class="form-control" type="text" id="tel1Mere" name="tel1Mere" ng-model="inscription.tel1Mere"  required>
+                    </div>
+                </div>
+                <div class="row" ng-if="!personneConnue">
+                    <div class="col-sm-4"><label for="tel3Mere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Professionnel")}}</label></div>
+                    <div class="col-sm-8"><input class="form-control" type="text" id="tel3Mere" name="tel3Mere" ng-model="inscription.tel3Mere">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Situation.Familiale")}}*</label></div>
+                    <div class="col-sm-8 display_left">
+                        <input type="radio"  name="situationFamiliale" id="ensemble" value="ensemble" ng-model="inscription.situationFamiliale" ng-click="formCtrl.parentsEnsemble = true; formCtrl.parentsSepares = false;" required>
+                                    <label for="ensemble" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
+                        <input type="radio"  name="situationFamiliale" id="separes" value="separes" ng-model="inscription.situationFamiliale" ng-click="formCtrl.parentsEnsemble = false; formCtrl.parentsSepares = true;">
+                                    <label for="separes" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Non")}}</label>
                     </div>
                 </div>
             
@@ -142,35 +151,6 @@
                 </div>
         </div>
         
-        
-        
-        <div class="col-xs-12" ng-if="!personneConnue && formCtrl.parentsEnsemble">
-            <h3 class="row">{{rubedo.translate("Block.Inscription.Domicile.Familial", "Domicile familial")}}</h3>
-        
-            <div class="row">
-                <div class="col-sm-4"><label for="adressePere" class="label_style">{{rubedo.translate("Block.Inscription.Adresse")}}*</label></div>
-                <div class="col-sm-8"><textarea class="form-control" rows="3" id="adressePere" ng-model="inscription.addressPere" name="addressPere" placeholder="" required></textarea></div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4"><label for="cpPere" class="label_style">{{rubedo.translate("Block.Inscription.CodePostal")}}</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="cpPere" ng-model="inscription.cpPere" name="cpPere"></div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4"><label for="cityPere" class="label_style">{{rubedo.translate("Block.Inscription.Ville")}}*</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="cityPere" ng-model="inscription.cityPere" name="cityPere" required></div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4"><label for="paysPere" class="label_style">{{rubedo.translate("Block.Inscription.Pays")}}</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="paysPere" ng-model="inscription.countryPere" name="countryPere"></div>
-            </div>
-            <!--ng-pattern="/^(0|\+33|0033){1}\/?[1-9]\s?([0-9]\s?){8}$/"-->
-            <div class="row" ng-if="!personneConnue">
-                <div class="col-sm-4"><label for="tel2Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}*</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="tel2Pere" name="tel2Pere"  ng-model="inscription.tel2Pere" required></div>
-            </div>
-            
- 
-        </div>
         
         
     </div>
