Theme la defense

--- a/theme/ladefense/css/ladefense.less
+++ b/theme/ladefense/css/ladefense.less
@@ -22,7 +22,7 @@
 
 //// VARIABLES FOYERS-ETUDIANTS.ORG
 @bg:#41a0c7;
-@txt_blue : #17789c;
+@txt_blue : #0facc0;
 @txt_dark:#333;
 /*polic pour titre des foyers*/
 @font-face {
